feat(auth): 优化验证码预校验与事务一致性处理
- 引入验证码预校验和预留机制，避免注册失败时验证码被提前消费
- 增加验证码预留缓存，支持注册成功后再消费验证码
- 结合事务同步，确保事务提交后才删除验证码缓存，失败时释放预留
- 添加验证码失败次数超限自动作废逻辑，增强安全防护
- 更新测试用例，新增邮箱映射丢失时预留释放测试
- 优化日志信息和异常消息格式，提高可读性与一致性